--- a/DevTeam.OrderedFilterAttribute.nuspec
+++ b/DevTeam.OrderedFilterAttribute.nuspec
@@ -4,6 +4,7 @@
     <id>DevTeam.OrderedFilterAttribute</id>
     <version>0.0.4</version>
     <title>Ordered Filter Attribute</title>
+    <iconUrl>http://dev-team.com/img/devteam.png</iconUrl>
     <authors>Dev Team Inc.</authors>
     <owners>Dev Team Inc.</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
